# pysolated

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  README.md  pyproject.toml
.agents/skills/software-design-research/: TEMPLATE.md
.agents/skills/write-a-skill/: SKILL.md
.claude/skills/: software-design-research  teach
.claude/skills/do-work/: SKILL.md
.claude/skills/find-skills/: SKILL.md
.claude/skills/software-design-research/: SKILL.md
.claude/skills/to-spec/: SKILL.md
.pysolated/: Containerfile  Dockerfile  main.py  prompt-tdd-embedded.md  prompt.md  prompt_old.txt  test.py
docs/adr/: 0001-agent-providers-return-argv.md  0002-asyncio-not-effect.md  0003-sandbox-providers-are-factories.md  0004-same-path-bind-mount.md  0005-docker-uid-alignment-via-build-arg.md  0006-result-event-is-error-channel-only.md  0007-branch-strategy-is-host-side-value.md  0008-branch-strategy-durable-worktree.md  0009-copy-to-worktree-overwrites-on-reuse.md  0010-init-is-an-interactive-wizard.md  0011-containerfile-composed-from-parts.md  0012-driver-substitution-and-env-forwarding.md
docs/futures/: agent-providers.md  agent-sessions.md  completed-features.md  docker-sandbox-provider.md  entry-points.md  env-resolution.md  features.md  init-scaffolding.md  lifecycle-hooks.md  lifecycle-timeout-overrides.md  observability-logging.md  platform-correctness.md  sandbox-providers.md  token-usage-reporting.md  worktrees-branching-sync.md
docs/prd/: 0001-pysolated-v1-run-loop.md
src/pysolated/: __init__.py  agents.py  cli.py  completion.py  core.py  display.py  errors.py  init.py  orchestrator.py  prompts.py  sandboxes.py  structured_output.py  worktrees.py
src/pysolated/agents/: __init__.py  _parsing.py  _registry.py  claude_code.py  codex.py
src/pysolated/sandboxes/: __init__.py  _images.py  _mounts.py  _streaming.py  docker.py  no_sandbox.py  podman.py
tests/: test_abort.py  test_agent_execution_error.py  test_branch_strategy_seam.py  test_build_agent.py  test_claude_code_command.py  test_cli.py  test_cli_agent_seam.py  test_codex_command.py  test_codex_session_usage.py  test_codex_stream_parser.py  test_commit_collection.py  test_completion_signal.py  test_copy_to_worktree.py  test_docker.py  test_file_display.py  test_init_cli.py  test_init_scaffold.py  test_iteration_loop.py  test_no_sandbox.py  test_orchestrator.py  test_podman.py  test_prompt_pipeline.py  test_result_event.py  test_run_agent_failure.py  test_run_file_logging.py  test_run_prompt_pipeline.py  test_run_structured_output.py  test_sandbox_lifecycle.py  test_session_usage.py  test_stream_parser.py  test_structured_output.py  test_terminal_display.py  test_timer_race.py  test_workdir_git_preflight.py  test_worktrees.py
